@@ -2,6 +2,7 @@
 * Enhancements
   * Added generated method to return text for a table
   * Added generated method to return text for an unordered list
+  * Added generated method to return text for an ordered list
   * Added html method to Element
   * Updated to use the latest selenium-webdriver 2.27.2
   * Updated to use the latest watir-webdriver 0.6.2
